backups/k3s/2-with-ingress/nginx-comb.yml
# 
# 1. Deployment
# 2. ConfigMap (html-Website)
# 3. Service: ClusterIP
# 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.10
        ports:
        - containerPort: 80
        volumeMounts:
        - name: custom-content
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: custom-content
        configMap:
          name: nginx-custom-content
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
